--- a/src/components/CityItem.module.css
+++ b/src/components/CityItem.module.css
@@ -13,6 +13,7 @@
 
   color: inherit;
   text-decoration: none;
+  margin: 1rem;
 }
 
 .cityItem--active {
@@ -51,4 +52,8 @@
 .deleteBtn:hover {
   background-color: var(--color-brand--1);
   color: var(--color-dark--1);
+}
+
+.li {
+  list-style-type: none;
 }
